--- a/src/app.css
+++ b/src/app.css
@@ -45,22 +45,58 @@ h1 {
 
 
 .receivers {
-  height: 400px;
-  width: 400px;
+  height: 500px;
+  width: 500px;
 }
 
 .draggables {
   display: flex;
+  flex-direction: column;
 }
 
 .draggable {
   height: fit-content;
   background-color: rgba(250, 250, 250, 1);
   margin: 0.5rem;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  font-size: x-small;
+  padding: 0.5rem;
+}
+
+
+.dragged {
+  border: none;
+}
+
+.controller-action {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  background-color: rgb(245, 161, 130);
+}
+
+.action-title {
+  grid-column: span 2;
 }
 
 .model-prop-textinput {
     border: solid 0.1rem #ccc;
+}
+
+.status-modal {
+  position: absolute;
+  padding: 1rem;
+  top: 1vh;
+  left: 15vh;
+  border-radius: 10px;
+  z-index: 999;
+  background-color: darkturquoise;
+  cursor: pointer;
+}
+
+.status-modal-toggle-btn {
+  position: absolute;
+  top: 1vh;
+  left: 1vh;
 }
 
 .card {
