--- a/src/app.css
+++ b/src/app.css
@@ -19,14 +19,49 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
+input {
+  border-radius: 5px;
+}
+
+@layer components {
+  .menu-icon {
+    @apply  relative flex  justify-center items-center text-2xl font-bold h-12 w-12 mx-2 shadow-sm
+     bg-green-400 text-white rounded-3xl hover:rounded-xl
+     transition-all duration-300 ease-linear;
+  }
+
+  .floating-icon {
+    @apply  fixed bottom-10 right-10 flex  justify-center items-center text-2xl font-bold h-12 w-12 mx-2 shadow-sm
+     bg-green-400 text-white rounded-3xl hover:rounded-xl
+     transition-all duration-300 ease-linear;
+  }
+
+  .modal-btn-left {
+    @apply absolute -top-2 -left-2 bg-orange-300 
+    rounded-full h-6 w-6 items-center text-white
+  }
+
+  .modal-btn-right {
+    @apply absolute -top-2 -right-2 bg-orange-300 
+    rounded-full h-6 w-6 items-center text-white
+  }
+
+  .dragging {
+    @apply border-2 border-slate-700 border-dashed
+  }
+
+}
+
+
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
@@ -36,7 +71,7 @@ body {
   min-height: 100vh;
   
 }
-
+/* 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -128,7 +163,7 @@ button {
 }
 button:hover {
   border-color: #646cff;
-}
+} */
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
