--- a/src/app.css
+++ b/src/app.css
@@ -2,31 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+body, html {
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-input {
-  border-radius: 5px;
+#app {
+  position: fixed;
+  width:100%;
+  height:100%;
+  box-sizing: border-box;
+  min-height: 100%;
+  overflow:auto;
+  font-family: circular,"Helvetica Neue",Helvetica,Arial,"sans-serif";
 }
 
 @layer components {
   .menu-icon {
     @apply  relative flex  justify-center items-center text-2xl font-bold h-12 w-12 mx-2 shadow-sm
-     bg-green-400 text-white rounded-3xl hover:rounded-xl
+     bg-green-500 text-white rounded-3xl hover:rounded-xl
      transition-all duration-300 ease-linear;
   }
 
@@ -63,14 +56,6 @@ a:hover {
   color: #535bf2;
 } */
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  
-}
 /* 
 h1 {
   font-size: 3.2em;
