--- a/src/app.css
+++ b/src/app.css
@@ -2,11 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body, html {
-
-}
-
 #app {
+  background-color: #121212;
+  border-color: #202425;
   position: fixed;
   width:100%;
   height:100%;
