--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,13 @@
 @layer components {
   .menu-icon {
     @apply  relative flex  justify-center items-center text-2xl font-bold h-12 w-12 mx-2 shadow-sm
-     bg-green-500 text-white rounded-3xl hover:rounded-xl
+     bg-green-600 border-darkish hover:bg-green-300 text-white rounded-3xl hover:rounded-xl
+     transition-all duration-300 ease-linear;
+  }
+
+  .menu-icon-red {
+    @apply  relative flex  justify-center items-center text-2xl font-bold h-12 w-12 mx-2 shadow-sm
+     bg-red-600 border-darkish hover:bg-red-400 text-white rounded-3xl hover:rounded-xl
      transition-all duration-300 ease-linear;
   }
 
